fixed navigation problems and added new header sytles

--- a/anon-gui/src/main/webapp/pages/cockpit/connect.xhtml
+++ b/anon-gui/src/main/webapp/pages/cockpit/connect.xhtml
@@ -10,6 +10,8 @@
 
 	<ui:define name="insert-content">
 	
+		<h:outputStylesheet library="css" name="cockpit.css" />
+	
 		<h:form id="selectConnectionForm">
 		
 			<ui:include src="/components/breadCrumb.xhtml">
