--- a/anon-gui/src/main/webapp/pages/connection/connectionList.xhtml
+++ b/anon-gui/src/main/webapp/pages/connection/connectionList.xhtml
@@ -1,14 +1,15 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition 
+	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	template="/layout/layout.xhtml">
-	<ui:define name="insert-content">
 	
+	<ui:define name="insert-content">
+
+		<h:outputStylesheet library="css" name="cockpit.css" />	
 
 		<h:form id="showConnectionForm">
 			<p:panel id="panel" header="Connection list">
@@ -43,6 +44,6 @@
 	
 			</p:panel>
 		</h:form>
-		<p:link outcome="/pages/connection/connectionAdd.xhtml" value="Add New"/>
+
 	</ui:define>
 </ui:composition>
