--- a/anon-gui/src/main/webapp/pages/connection/connectionList.xhtml
+++ b/anon-gui/src/main/webapp/pages/connection/connectionList.xhtml
@@ -26,7 +26,7 @@
 					</p:column>
 					
 					<p:column headerText="Vendor" filterBy="#{config.vendor}">
-						<h:outputText value="#{config.vendor}"/>
+						<h:outputText value="#{config.vendor.name}"/>
 					</p:column>	
 					
 					<p:column headerText="Version" filterBy="#{config.version}">
