--- a/anon-gui/src/main/webapp/pages/connection/connectionAdd.xhtml
+++ b/anon-gui/src/main/webapp/pages/connection/connectionAdd.xhtml
@@ -45,12 +45,29 @@ xmlns="http://www.w3.org/1999/xhtml"
 					
 					<h:panelGrid columns="3">
 						<p:commandButton id="addConnection" value="Save" 
-							actionListener="#{databaseConfigBacking.addDatabaseConfig}" update="panel,:menuForm:menuBar" />
+							actionListener="#{databaseConfigBacking.addDatabaseConfig}" update="panel,:menuForm:menuBar"
+							disabled="#{licenseManager.reachedMaxDbConnections(databaseConfigBacking.configList.size())}"/>
+						<p:lightBox iframe="true" id="anonimexHomeLightBox" rendered="#{licenseManager.reachedMaxDbConnections(databaseConfigBacking.configList.size())}"> 
+						    <h:outputLink value="http://www.anonimecs.com/products.html" title="Anonimecs">
+						        <h:outputText value="Maximal connection count reached. Please upgrade your license." />
+						    </h:outputLink>
+						</p:lightBox>
 					</h:panelGrid>
 					
 				</h:panelGrid>
 	
 			</p:panel>
 		</h:form>
+		
+		<p:dialog header="Upgrade to Enterprise edition" widgetVar="licenseDialog" minHeight="100">
+		    <h:outputText value="You are using the Free edition of Anonimecs." />
+		    <br/>
+		    <h:link  action="http://www.anonimecs.com/products.html" target="_blank">
+		    	<h:outputText value="Upgrade to the Enterpise edition." />
+		    </h:link>
+		</p:dialog>
+		
+		
+
 	</ui:define>
 </ui:composition>
