added default schema to connection menu / split anonConfig / execConfig

--- a/anon-gui/src/main/webapp/pages/connection/connectionList.xhtml
+++ b/anon-gui/src/main/webapp/pages/connection/connectionList.xhtml
@@ -25,6 +25,10 @@
 						<h:outputText value="#{config.url}"/>
 					</p:column>
 					
+					<p:column headerText="Schema" filterBy="#{config.defaultSchema}">
+						<h:outputText value="#{config.defaultSchema}"/>
+					</p:column>
+					
 					<p:column headerText="Login" filterBy="#{config.login}">
 						<h:outputText value="#{config.login}"/>
 					</p:column>
