closes #57 - show license information in menu bar

--- a/anon-gui/src/main/webapp/pages/exec/execAudit.xhtml
+++ b/anon-gui/src/main/webapp/pages/exec/execAudit.xhtml
@@ -29,13 +29,13 @@
 					<p:column headerText="Finished" width="8%">
 						<h:outputText value="#{execAuditListTableRow.executionData.endTime}"  converter="weekTimestampConverter"/>
 					</p:column>
-					<p:column headerText="Status" width="100">
+					<p:column headerText="Status" width="15%">
 						<h:outputText value="#{execAuditListTableRow.executionData.status}"/>
 					</p:column>
-					<p:column headerText="Started by" width="120">
+					<p:column headerText="Started by" width="10%">
 						<h:outputText value="#{execAuditListTableRow.executionData.userName}"/>
 					</p:column>
-					<p:column headerText="Info" width="20%">
+					<p:column headerText="Info" width="30%">
 						<h:outputText value="#{execAuditListTableRow.executionData.description}"/>
 					</p:column>
 					
