#79 more mapping types

--- a/anon-gui/src/main/webapp/pages/cockpit/anonymize.xhtml
+++ b/anon-gui/src/main/webapp/pages/cockpit/anonymize.xhtml
@@ -194,7 +194,7 @@
 				    		<p:outputLabel value="#{mappingRule.getClass().getSimpleName()}"/>
 				    	</p:column>
 				    	<p:column headerText="Condition" styleClass="colConditionStyle">
-				    		<p:outputLabel value="#{mappingRule.getCondition()}"/>
+				    		<p:outputLabel value="#{mappingRule.getBoundary()}"/>
 				    	</p:column>
 				    	<p:column headerText="Value" styleClass="colValueStyle">
 				    		<p:outputLabel value="#{mappingRule.getMappedValue()}"/>
