#88 connect and anon is working

--- a/anon-gui/src/main/webapp/pages/connection/connectionAdd.xhtml
+++ b/anon-gui/src/main/webapp/pages/connection/connectionAdd.xhtml
@@ -53,7 +53,7 @@ xmlns="http://www.w3.org/1999/xhtml"
 						
 						<h:panelGrid columns="3">
 							<p:commandButton id="addConnection" value="Save" 
-								actionListener="#{databaseConfigBacking.addDatabaseConfig}" update="panel,:menuForm:menuBar"
+								actionListener="#{databaseConfigBacking.onSaveDatabaseConfig()}" update="panel,:menuForm:menuBar"
 								disabled="#{licenseManager.reachedMaxDbConnections(databaseConfigBacking.configList.size()) or empty databaseConfigBacking.schemaList}"/>
 							<p:lightBox iframe="true" id="anonimexHomeLightBox" rendered="#{licenseManager.reachedMaxDbConnections(databaseConfigBacking.configList.size())}"> 
 							    <h:outputLink value="http://www.anonimecs.com/products.html" title="Anonimecs">
