--- a/anon-gui/src/main/webapp/pages/connection/connectionEdit.xhtml
+++ b/anon-gui/src/main/webapp/pages/connection/connectionEdit.xhtml
@@ -46,7 +46,7 @@ xmlns="http://www.w3.org/1999/xhtml"
 
 					<h:panelGrid columns="3">
 						<p:commandButton id="addConnection" value="Update" 
-							actionListener="#{databaseConfigBacking.updateDatabaseConfig}" update="panel,:menuForm:menuBar" />
+							actionListener="#{databaseConfigBacking.updateDatabaseConfig}" update="panel,:menuForm:menuBar" disabled="true"/>
 					</h:panelGrid>
 					
 				</h:panelGrid>
