--- a/anon-gui/src/main/webapp/pages/connection/connectionAdd.xhtml
+++ b/anon-gui/src/main/webapp/pages/connection/connectionAdd.xhtml
@@ -60,10 +60,11 @@ xmlns="http://www.w3.org/1999/xhtml"
 						<p:message id="defaultSchemaMsg" for="defaultSchema"/>
 						
 						<h:panelGrid columns="3">
-							<p:commandButton id="testConnection" value="Test" actionListener="#{databaseConfigBacking.testDatabaseConfig}" update="addConnection,defaultSchema,permissionErrorBox"/>
+							<p:commandButton id="testConnection" value="Test" actionListener="#{databaseConfigBacking.testDatabaseConfig}" 
+								update="addConnection,defaultSchema,permissionErrorBox" disabled="true" />
 							<p:commandButton id="addConnection" value="Save" 
 								actionListener="#{databaseConfigBacking.addDatabaseConfig}" update="panel,:menuForm:menuBar"
-								disabled="#{licenseManager.reachedMaxDbConnections(databaseConfigBacking.configList.size()) or empty databaseConfigBacking.schemaList}"/>
+								disabled="true"/>
 							<p:lightBox iframe="true" id="anonimexHomeLightBox" rendered="#{licenseManager.reachedMaxDbConnections(databaseConfigBacking.configList.size())}"> 
 							    <h:outputLink value="http://www.anonimecs.com/products.html" title="Anonimecs">
 							        <h:outputText value="Maximal connection count reached. Please upgrade your license." />
