--- a/anon-gui/src/main/webapp/pages/connection/connectionList.xhtml
+++ b/anon-gui/src/main/webapp/pages/connection/connectionList.xhtml
@@ -43,7 +43,7 @@
 					
 					<p:column style="width:10%">					
 			        	<p:commandButton id="deleteButton" update=":showConnectionForm:panel,:menuForm:menuBar" icon="ui-icon-close"
-			        		disabled="#{databaseConfigBacking.isConfigInUse(config)}"
+			        		disabled="true"
 			        		title="Delete" actionListener="#{databaseConfigBacking.deleteDatabaseConfig(config)}">
 			        		<p:confirm header="Confirmation"
 			        			message="Delete this Connection, including all anonymization config ?" 
