fixes #104 - tooltip mouse tracking enabled

--- a/anon-gui/src/main/webapp/pages/cockpit/databaseTableList.xhtml
+++ b/anon-gui/src/main/webapp/pages/cockpit/databaseTableList.xhtml
@@ -45,7 +45,8 @@
 						
 						<p:column headerText="Table" filterBy="#{databaseTableInfo.name}" filterMatchMode="contains" sortBy="#{databaseTableInfo.name}" width="200">
 		        			<h:outputText value="#{databaseTableInfo.name}" />
-							<p:tooltip for="@(.myTable tr[role=row][data-ri=#{rowIndex}])" rendered="#{not empty databaseTableInfo.getActiveAnonCandidateList()}">
+							<p:tooltip for="@(.myTable tr[role=row][data-ri=#{rowIndex}])" rendered="#{not empty databaseTableInfo.getActiveAnonCandidateList()}"
+								trackMouse="true">
 								<p:dataList value="#{databaseTableInfo.getAnonCandidateList()}" var="anonCandidate">
 									<f:facet name="header">
                     					<h:outputText value="Anonymisation Suggestions"/>
